# gym-app

./: .gitignore  CLAUDE.md  CLIENT_AND_PROGRAM_PARAMETERS.md  COACH_CLIENT_SUBSCRIPTION_PLAN.md  COACH_WORKFLOW_PROGRAM_ASSIGNMENT.md  DEPLOYMENT.md  Exercise_Program_Application–AWS_Arc.md  FRONTEND_BACKEND_SYNC.md  FRONTEND_PASSWORD_CHANGE_IMPLEMENTATION.md  IMPLEMENTATION_PHASE1_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  PASSWORD_CHANGE_FEATURE_SUMMARY.md  PERSONAS.md  PROGRAMA LINEAL FUERZA  #1 - APP.xlsx  PROGRAM_BUILDER.md  PROGRAM_BUILDER_IMPLEMENTATION_PLAN.md  PROGRAM_TRACKING_PLAN.md  ProgramBuilderScope.txt  README.md  SESSION_SUMMARY.md  STRENGTH_BUILDER_ARCHITECTURE.md  apprunner.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  TEST_RESULTS.md  TrainGen Engine — API Reference.MD  pyproject.toml  query_db.py  requirements.txt  test_client_program_endpoints.py  test_password_change.py  test_password_change_manual.py  test_program_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 0860cfe8f6ce_initial_schema.py  099175ffcad0_add_template_system_with_exercises_.py  3dbdba4eec75_add_workout_log_model.py  6e08e008e7e4_initial_schema.py  98bdccbb6b23_add_password_must_be_changed_field_to_.py  a1b2c3d4e5f6_add_program_status.py
backend/app/: main.py
backend/app/api/: Admin user created successfully!.md  assignments.py  auth.py  clients.py  coaches.py  engine_proxy.py  example.py  exercises.py  locations.py  me_plans.py  programs.py  subscriptions.py  templates.py  users.py  workouts.py
backend/app/core/: ProgramBuilderInstructions.md  config.py  database.py  deps.py  security.py  seed.py  seed_exercises.py
backend/app/models/: __init__.py  audit_log.py  base.py  client_program_assignment.py  coach_client_assignment.py  exercise.py  generated_plan.py  location.py  program.py  program_assignment.py  subscription.py  (+3 more)
backend/deploy/: entrypoint.sh  nginx.conf  supervisord.conf
backend/tests/: test_workouts.py
backend/tools/: README.md  __init__.py  create_and_seed_templates.sql  generate_secret_key.py  seed_manual.sql
program-builder/: .coverage  Dockerfile  pyproject.toml  requirements.txt
program-builder/definitions/: fullbody_3x_spec_4w_v1.json
program-builder/examples/: conditioning_plan_request.json
program-builder/lambda/: handler.py
program-builder/schemas/: exercise_library.schema.json  generated_plan.schema.json  program_definition.schema.json
program-builder/src/: main.py
program-builder/tests/: conftest.py
(+277 files in other folders)
